# filehole

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/filehole/: __init__.py
tests/unit/: test_filehole.py
tests/units/: test_filehole.py
