[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filehole"
version = "0.0.3"
authors = [
  { name="Virginie Grosboillot", email="vestalisvirginis@gmail.com" },
]
description = "Python library to find missing files in a scheduled delivery."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vestalisvirginis/filehole"
"Bug Tracker" = "https://github.com/vestalisvirginis/filehole/issues"